--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    # --- CONFIGURACIÓN DEL SERVICIO MYSQL ---
+    # --- SERVICIO MySQL PARA CI ---
     services:
       mysql:
         image: mysql:8.0
@@ -29,7 +29,7 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=10
-    # ----------------------------------------
+    # --------------------------------
 
     steps:
       - uses: actions/checkout@v4
@@ -39,12 +39,12 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Instalar dependencias del sistema para GUI y mysql-client
+      - name: Instalar deps. del sistema y mysql-client
         run: |
           sudo apt-get update
           sudo apt-get install -y libgl1 mesa-utils mysql-client
 
-      - name: Instalar dependencias de Python
+      - name: Instalar deps. de Python
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -53,14 +53,14 @@ jobs:
         run: |
           for i in $(seq 1 30); do
             if mysql -h 127.0.0.1 -u${{ secrets.MYSQL_USER }} -p${{ secrets.MYSQL_PASSWORD }} -e "SELECT 1;" 2>/dev/null; then
-              echo "MySQL está listo."
+              echo "MySQL listo."
               break
             fi
-            echo "Esperando a MySQL... ($i/30)"
+            echo "Esperando MySQL... ($i/30)"
             sleep 2
           done
           if [ $i -eq 30 ]; then
-            echo "Error: MySQL no se inició a tiempo."
+            echo "Error: MySQL no arrancó a tiempo."
             exit 1
           fi
 
@@ -71,14 +71,14 @@ jobs:
           DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
           DB_DATABASE: ${{ secrets.MYSQL_DATABASE }}
         run: |
-          DB_BACKUP_FILE="backup/accesobiometrico_v5.0.sql"
-          if [ ! -f "$DB_BACKUP_FILE" ]; then
-            echo "Error: '$DB_BACKUP_FILE' no encontrado."
+          BACKUP="backup/accesobiometrico_v5.0.sql"
+          if [ ! -f "$BACKUP" ]; then
+            echo "⚠️ $BACKUP no encontrado."
             exit 1
           fi
-          mysql -h "${DB_HOST}" -u"${DB_USER}" -p"${DB_PASSWORD}" "${DB_DATABASE}" < "${DB_BACKUP_FILE}"
+          mysql -h "$DB_HOST" -u"$DB_USER" -p"$DB_PASSWORD" "$DB_DATABASE" < "$BACKUP"
 
-      - name: Ejecutar Tests con Pytest
+      - name: Ejecutar tests con Pytest
         env:
           DB_HOST:     127.0.0.1
           DB_USER:     ${{ secrets.MYSQL_USER }}
@@ -102,19 +102,18 @@ jobs:
       - name: Verificar errores en Locust
         run: |
           if [ -f output/resultados_failures.csv ] && grep -q '[1-9]' output/resultados_failures.csv; then
-            echo "❌ Se encontraron errores durante la prueba de carga."
+            echo "❌ Errores durante la carga."
             cat output/resultados_failures.csv
             exit 1
-          else
-            echo "✅ No se encontraron errores en la prueba de carga."
           fi
+          echo "✅ Prueba de carga sin errores."
 
-      - name: Validar rendimiento (tiempo promedio)
+      - name: Validar rendimiento (promedio)
         run: |
-          avg_response_time=$(awk -F',' '$1 ~ /Insertar Perfil/ {print $5}' output/resultados_stats.csv | tail -n1)
-          echo "⏱ Tiempo promedio de 'Insertar Perfil': $avg_response_time ms"
-          if (( $(echo "$avg_response_time > 500" | bc -l) )); then
-            echo "❌ El tiempo de respuesta promedio supera el umbral permitido (500 ms)"
+          avg=$(awk -F',' '$1 ~ /Insertar Perfil/ {print $5}' output/resultados_stats.csv | tail -n1)
+          echo "⏱ Avg response time: $avg ms"
+          if (( $(echo "$avg > 500" | bc -l) )); then
+            echo "❌ Promedio > 500ms"
             exit 1
           fi
 
@@ -124,22 +123,28 @@ jobs:
           name: resultados-locust
           path: output/
 
-      # —————— Fusión automática en main ——————
+      # —————— Auto-merge en main si todo pasa ——————
       - name: Auto-merge to main
         if: >
           success() &&
           (github.ref == 'refs/heads/Gonzalo' || github.ref == 'refs/heads/DEVJAVIER-QA')
         uses: actions/github-script@v6
+        continue-on-error: true
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const branch = context.ref.replace('refs/heads/', '')
-            await github.rest.repos.merge({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              base: 'main',
-              head: branch
-            })
+            const branch = context.ref.replace('refs/heads/', '');
+            try {
+              await github.rest.repos.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                base: 'main',
+                head: branch
+              });
+              console.log(`Merge ${branch} → main OK`);
+            } catch (error) {
+              console.log('⚠️ Merge conflict:', error.message);
+            }
 
       # —————— NOTIFICACIONES POR CORREO ——————
       - name: Enviar correo de éxito
@@ -150,11 +155,11 @@ jobs:
           server_port:    ${{ secrets.SMTP_PORT }}
           username:       ${{ secrets.SMTP_USERNAME }}
           password:       ${{ secrets.SMTP_PASSWORD }}
+          to:             ${{ secrets.NOTIFY_EMAIL }}
           subject:        "✅ CI/CD exitoso en ${{ github.repository }}"
           body:           |
-            🎉 La pipeline de `${{ github.workflow }}` se completó correctamente.
+            🎉 La pipeline `${{ github.workflow }}` finalizó correctamente.
             Rama: `${{ github.ref }}`
-          to:             ${{ secrets.NOTIFY_EMAIL }}
           from:           "ci@${{ github.repository_owner }}.com"
 
       - name: Enviar correo de fallo
@@ -165,9 +170,9 @@ jobs:
           server_port:    ${{ secrets.SMTP_PORT }}
           username:       ${{ secrets.SMTP_USERNAME }}
           password:       ${{ secrets.SMTP_PASSWORD }}
+          to:             ${{ secrets.NOTIFY_EMAIL }}
           subject:        "❌ CI/CD fallido en ${{ github.repository }}"
           body:           |
-            🚨 La pipeline de `${{ github.workflow }}` ha fallado.
+            🚨 La pipeline `${{ github.workflow }}` ha fallado.
             Revisa los logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-          to:             ${{ secrets.NOTIFY_EMAIL }}
           from:           "ci@${{ github.repository_owner }}.com"
