preuba de merge 5

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,15 +6,21 @@ on:
       - Gonzalo
       - Javier
       - Yeiler
-      - Maikel
+      - DEV-QA
   pull_request:
     branches:
       - main
   workflow_dispatch: {}
 
+# Permisos globales para todo el workflow
 permissions:
   contents: write
   pull-requests: write
+  checks: write
+  statuses: write
+
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   build-and-test:
@@ -76,27 +82,20 @@ jobs:
         DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
         DB_DATABASE: ${{ secrets.MYSQL_DATABASE }}
       run: |
-        DB_BACKUP_FILE="backup/accesobiometrico_v5.0.sql"
-        
-        if [ ! -f "$DB_BACKUP_FILE" ]; then
-          echo "Error: El archivo de backup SQL '$DB_BACKUP_FILE' no se encontró en el repositorio."
-          exit 1
-        fi
-        
-        echo "Importando '$DB_BACKUP_FILE' a la base de datos '${{ secrets.MYSQL_DATABASE }}'"
+        DB_BACKUP_FILE="backup/accesobiometrico_v5.1.sql"
+        [ -f "$DB_BACKUP_FILE" ] || { echo "Error: Archivo de backup no encontrado"; exit 1; }
         mysql -h "${DB_HOST}" -u"${DB_USER}" -p"${DB_PASSWORD}" "${DB_DATABASE}" < "${DB_BACKUP_FILE}"
 
-    - name: Ejecutar Tests con Pytest
+    - name: Ejecutar Tests
       env: 
         DB_HOST: 127.0.0.1
         DB_USER: ${{ secrets.MYSQL_USER }}
         DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
         DB_DATABASE: ${{ secrets.MYSQL_DATABASE }}
       run: |
-        pytest tests/unitarias
-        pytest tests/seguridad
+        pytest tests/unitarias tests/security
 
-    - name: Ejecutar pruebas de carga con Locust
+    - name: Pruebas de carga con Locust
       env:
         DB_HOST: 127.0.0.1
         DB_USER: ${{ secrets.MYSQL_USER }}
@@ -105,49 +104,70 @@ jobs:
       run: |
         mkdir -p output
         locust -f tests/rendimiento/test_rendimiento_justificacion.py --headless -u 150 -r 10 --run-time 1m30s --csv=output/resultados
+        [ ! -f output/resultados_failures.csv ] || (cat output/resultados_failures.csv && exit 1)
 
-    - name: Verificar errores en Locust
-      run: |
-        if [ -f output/resultados_failures.csv ] && grep -q '[1-9]' output/resultados_failures.csv; then
-          echo "❌ Se encontraron errores durante la prueba de carga."
-          cat output/resultados_failures.csv
-          exit 1
-        else
-          echo "✅ No se encontraron errores en la prueba de carga."
-        fi
-
-    - name: Validar rendimiento
-      run: |
-        avg_response_time=$(awk -F',' '$1 ~ /Insertar Perfil/ {print $5}' output/resultados_stats.csv | tail -n1)
-        echo "⏱ Tiempo promedio de 'Insertar Perfil': $avg_response_time ms"
-        if (( $(echo "$avg_response_time > 500" | bc -l) )); then
-          echo "❌ El tiempo de respuesta promedio supera el umbral permitido (500 ms)"
-          exit 1
-        fi
-
-    - name: Guardar resultados de pruebas
+    - name: Guardar resultados
       uses: actions/upload-artifact@v4
       with:
         name: resultados-pruebas
         path: output/
 
+  merge-to-main:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      checks: write
+      statuses: write
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Merge DEV-QA a MAIN (usando CLI)
+      run: |
+        # Configurar git
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        
+        # Obtener ambas ramas
+        git fetch origin main
+        git fetch origin DEV-QA
+        
+        # Hacer merge
+        git checkout main
+        git merge --no-ff DEV-QA -m "Merge automático DEV-QA a MAIN [skip ci]"
+        
+        # Empujar los cambios
+        git push origin main
+
     - name: Enviar correo de éxito
-      if: success()
       uses: dawidd6/action-send-mail@v3
       with:
         server_address: smtp.gmail.com
         server_port: 465
-        secure: true  # Explicitly set secure to true for SSL
         username: ${{ secrets.EMAIL_USER }}
         password: ${{ secrets.EMAIL_PASSWORD }}
-        subject: '✅ Éxito en CI/CD - Merge completado'
-        body: 'Las pruebas fueron exitosas y el merge de DEV-QA a MAIN se completó correctamente.\n\nDetalles del workflow: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+        subject: '✅ Merge completado: DEV-QA → MAIN'
+        body: 'Merge automático completado exitosamente.\n\nDetalles: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
         to: ${{ secrets.NOTIFICATION_EMAIL }}
         from: GitHub Actions
 
-    - name: Desplegar a producción via FTP
-      if: success()
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+  deploy-prod:
+    needs: merge-to-main
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Preparar archivos
+      run: |
+        mkdir -p deploy
+        cp -r src/ deploy/
+        cp requirements.txt deploy/
+
+    - name: Desplegar vía FTP
+      uses: SamKirkland/FTP-Deploy-Action@v4
       with:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
@@ -161,40 +181,17 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Descargar resultados de pruebas
-      uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v3
       with:
         name: resultados-pruebas
 
-    - name: Enviar correo de éxito
-      if: success()
+    - name: Enviar correo de error
       uses: dawidd6/action-send-mail@v3
       with:
         server_address: smtp.gmail.com
         server_port: 465
-        secure: true  # Explicitly set secure to true for SSL
         username: ${{ secrets.EMAIL_USER }}
         password: ${{ secrets.EMAIL_PASSWORD }}
-        subject: '✅ Éxito en CI/CD - Merge completado'
-        body: 'Las pruebas fueron exitosas y el merge de DEV-QA a MAIN se completó correctamente.\n\nDetalles del workflow: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+        subject: '❌ Fallo en CI/CD'
+        body: 'Las pruebas fallaron. Revisa los detalles.\n\nWorkflow: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
         to: ${{ secrets.NOTIFICATION_EMAIL }}
-        from: GitHub Actions
-
-  # Si los tests pasaron y estamos en una de las ramas de trabajo,
-  # fusionamos automáticamente en main
-    - name: Auto-merge to main
-      if: >
-        success() &&
-        (github.ref == 'refs/heads/Gonzalo' || github.ref == 'refs/heads/Javier' || github.ref == 'refs/heads/Yeiler')
-      uses: actions/github-script@v6
-      with:
-        github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}  # Cambia a tu token personal
-        script: |
-          const branch = context.ref.replace('refs/heads/', '');
-          console.log(`Merging '${branch}' into 'main'…`);
-          await github.rest.repos.merge({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            base: 'main',
-            head: branch
-          });
